versions/1.21.4/translated/ru_ru/develop/items/food.md
---
title: Предметы еды
description: Узнайте, как добавить FoodProperties к предмету, чтобы сделать его съедобным, и как его настроить.
authors:
  - IMB11
---

Еда — это ключевой аспект выживания в Minecraft, поэтому при создании съедобных предметов вам следует учитывать их использование с другими съедобными предметами.

Если вы не создаете мод с очень мощными предметами, вам следует учесть:

- Насколько сильное чувство голода добавляет или убирает ваш съедобный продукт.
- Какой эффект(ы) зелья оно дает?
- Доступно ли оно на ранней или конечной стадии игры?

## Добавляем компонент еды {#adding-the-food-component}

Чтобы добавить пищевой компонент к элементу, мы можем передать его экземпляру `Item.Properties`:

```java
new Item.Properties().food(new FoodProperties.Builder().build())
```

На данный момент это просто делает продукт съедобным и ничего более.

Класс `FoodProperties.Builder` имеет несколько методов, которые позволяют вам изменить то, что происходит, когда игрок съедает ваш предмет:

| Метод                | Описание                                                                                  |
| -------------------- | ----------------------------------------------------------------------------------------- |
| `nutrition`          | Устанавливает количество очков голода, которое восполнит ваш предмет.     |
| `saturationModifier` | Устанавливает количество точек насыщенности, которые добавит ваш элемент. |
| `alwaysEdible`       | Позволяет съесть ваш предмет независимо от уровня голода.                 |

После того как вы изменили конструктор по своему вкусу, вы можете вызвать метод `build()`, чтобы получить `FoodProperties`.

Если вы хотите добавить эффекты статуса игроку, когда он ест вашу еду, вам нужно будет использовать `ConsumableComponent` вместе с классом `FoodProperties`, как показано в следующем примере:

@[code transcludeWith=:::5](@/reference/1.21.4/src/main/java/com/example/docs/item/ModItems.java)

Подобно примеру на странице [Создание вашего первого элемента](./first-item), я буду использовать указанный выше компонент:

@[code transcludeWith=:::poisonous_apple](@/reference/1.21.4/src/main/java/com/example/docs/item/ModItems.java)

Это делает предмет:

- Всегда съедобным, может быть съеден независимо от уровня голода.
- Всегда дающим Отравление II на 6 секунд когда съеден.

<VideoPlayer src="/assets/develop/items/food_0.webm" title="Eating the Poisonous Apple" />
