versions/26.1.2/translated/ru_ru/develop/items/food.md
---
title: Предметы еды
description: Узнайте, как добавить FoodComponent к предмету, чтобы сделать его съедобным, и как его настроить.
authors:
  - IMB11
---

Еда — это ключевой аспект выживания в Minecraft, поэтому при создании съедобных предметов вам следует учитывать их использование с другими съедобными предметами.

Если вы не создаете мод с очень мощными предметами, вам следует учесть:

- Насколько сильное чувство голода добавляет или убирает ваш съедобный продукт.
- Какой эффект(ы) зелья оно дает?
- Доступно ли оно на ранней или конечной стадии игры?

## Добавляем компонент еды {#adding-the-food-component}

Чтобы добавить компонент к элементу, мы можем передать его экземпляру `Item.Properties`:

```java
new Item.Properties().food(new FoodProperties.Builder().build())
```

На данный момент это просто делает продукт съедобным и ничего более.

Класс `FoodProperties.Builder` имеет несколько методов, которые позволяют вам изменить то, что происходит, когда игрок съедает ваш предмет:

| Метод                | Описание                                                                                  |
| -------------------- | ----------------------------------------------------------------------------------------- |
| `nutrition`          | Устанавливает количество очков голода, которое восполнит ваш предмет.     |
| `saturationModifier` | Устанавливает количество точек насыщенности, которые добавит ваш элемент. |
| `alwaysEdible`       | Позволяет съесть ваш предмет независимо от уровня голода.                 |

После того как вы настроили конструктор по своему усмотрению, вы можете вызвать метод `build()`, чтобы получить объект `FoodProperties`.

Если вы хотите применить к игроку эффекты мобов, (статусные эффекты) когда он съедает вашу еду, вам нужно добавить компонент `Consumable` наряду с компонентом `FoodProperties`, как показано в следующем примере:

<<< @/reference/26.1.2/src/main/java/com/example/docs/item/ModItems.java#custom_food

Подобно примеру на странице [Создание вашего первого элемента](./first-item), я буду использовать указанный выше компонент:

<<< @/reference/26.1.2/src/main/java/com/example/docs/item/ModItems.java#poisonous_apple

Это делает предмет:

- Всегда съедобным, может быть съеден независимо от уровня голода.
- Всегда дающим Отравление II на 6 секунд когда съеден.
